# translator-ingests

./: .codespellignore  .gitignore  404.html  AGENTS.md  CLAUDE.md  DEVELOPERS_README.md  INGESTERS_README.md  Jenkinsfile  LICENSE  Makefile  README.md  RIG_README.md  Snakefile  doc.Makefile  download.yaml  graphs.yaml  index.html  just-a-file  justfile  mkdocs.yml  pr-description.md  project.Makefile  project.justfile  pyproject.toml  re-ingest-sop.md  rig.Makefile  rig.justfile  sitemap.xml  source-ingest-sop.md
.github/agents/: AGENTS.md
.github/workflows/: codespell.yaml  main.yaml  mkdocs.yaml  pypi.yaml
ctd/: CTD_chemicals_diseases_small.tsv  README.md  ingest_utils.py  requirements.txt  run-parser-big.sh  run-parser.sh  transform_ctd.py
docs/: draft-interface-thoughts.md
rigs/: pathbank_rig.yaml  semmeddb_rig.yaml  ttd_rig.yaml  ubergraph_rig.yaml
rigs/alliance-rig/: index.html
rigs/alliance_rig/: index.html
rigs/bgee_rig/: index.html
rigs/chembl-rig/: index.html
rigs/chembl_rig/: index.html
rigs/cohd_rig/: index.html
rigs/ctd_rig/: index.html
rigs/ctkp_rig/: index.html
rigs/cureid_rig/: index.html
rigs/dakp_rig/: index.html
rigs/dgidb_rig/: index.html
rigs/diseases_rig/: index.html
rigs/drug_rep_hub_rig/: index.html
rigs/drugcentral_rig/: index.html
rigs/ebi-gene2phenotype-rig/: index.html
rigs/gene2phenotype-rig/: index.html
rigs/gene2phenotype_rig/: index.html
rigs/geneticskp_rig/: index.html
rigs/go_cam_rig/: index.html
rigs/goa-rig/: index.html
rigs/goa_rig/: index.html
rigs/gocam-rig/: index.html
rigs/gtopdb_rig/: index.html
rigs/hpo-annotations_rig/: index.html
rigs/hpoa_rig/: index.html
rigs/icees_rig/: index.html
rigs/intact_rig/: index.html
rigs/ncbi_gene_rig/: index.html
rigs/panther-rig/: index.html
rigs/panther_rig/: index.html
rigs/panther_rig_with_automat_edges/: index.html
rigs/pathbank_rig/: index.html
rigs/pubtator_rig/: index.html
rigs/semmeddb_rig/: index.html
rigs/sider_rig/: index.html
rigs/signor-rig/: index.html
rigs/signor_rig/: index.html
rigs/string_rig/: index.html
rigs/tmkp_rig/: index.html
rigs/ttd-rig/: index.html
rigs/ttd_rig/: index.html
rigs/ubergraph_rig/: index.html
search/: search_index.json
src/: README.md  WRITING_A_KGX_PASSTHROUGH_PARSER.md
src/docs/: rig_index.md  rig_template.yaml
src/docs/designs/polar/: bindingdb_polars_example.py  extract_bindingdb_columns.py  test_polars_performance.py
src/docs/designs/polars/: POLARS_INTEGRATION_README.md  bindingdb_comparison.md  bindingdb_polars_example.py  extract_bindingdb_columns.py  test_polars_performance.py
src/docs/files/: rig_index.md
src/docs/ingests/: README.md
src/docs/ingests/bindingdb/: PubChem_diagnosis.txt
src/docs/ingests/panther/: download.yaml  panther_rig_with_automat_edges.yaml  panther_sequence_classifications.txt
src/docs/rig_index/: index.html
src/docs/scripts/: README.md  annotate_rig.py  create_rig.py  generate_rig_index.py  generate_rig_table.py  index.html  mkg_to_rig.py  rig_to_markdown.py
src/scripts/: create_rig.py  mkg_to_rig.py
src/translator_ingest/: .gitignore  WRITING_A_KGX_PASSTHROUGH_PARSER.md  __init__.py  graphs.py  ingest_config.py  merging.py  normalize.py  pipeline.py  release.py  rig-specification.md  upload_s3.py
src/translator_ingest/.github/workflows/: main.yaml
src/translator_ingest/agrkb/: download.yaml
src/translator_ingest/ingests/: README.md  __init__.py  rig-instructions.md  rig-specification.md  rig_schema.yaml  rig_template.yaml
src/translator_ingest/ingests/_ingest_template/: README.md  _ingest_template.py  _ingest_template.yaml  download.yaml  ingest-template.py  ingest-template.yaml  ingest_template.py  rig-template.md  rig.md
src/translator_ingest/ingests/agrkb/: cli.py  download.yaml  genotype_metadata.yaml  rig.md
src/translator_ingest/ingests/alliance/: alliance.py  alliance.yaml  alliance_rig.yaml  download.yaml
src/translator_ingest/koza/: __init__.py  main.py  runner.py
src/translator_ingest/util/: DOWNLOAD_VERSION_SUBSTITUTION.md  README.md  association_id.py  biolink.py  biolink_validation_plugin.py  download_utils.py  github.py  http.py  http_utils.py  kgx.py  logging_utils.py  metadata.py  normalize.py  transform_utils.py  validate_biolink_kgx.py  validate_kgx.py
tests/: README.md  __init__.py  conftest.py  test_association_ids.py  test_shared_unit_test_methods.py  util.py
tests/config/: test_source_config_yaml.py
tests/integration/: test_koza_runner.py  test_s3_lastmodified_preservation.py  test_string_integration.py  test_ubergraph_integration.py
tests/unit/: test_annotate_rig.py  test_annotator.py  test_biolink.py  test_biolink_schema_loading.py  test_biolink_validation_plugin.py  test_build.py  test_dataset.py  test_datasets.py  test_datasource.py  test_download.py  test_download_utils.py  test_ebs_cleanup.py  test_fallback.py  test_graphs.py  test_http.py  test_ingest_config.py  test_kgx.py  test_merging.py  test_mkg_to_rig.py  test_normalization.py  test_release.py  test_release_version.py  test_s3_skip_unchanged.py  test_shared_unit_test_methods.py  test_stage_log_upload.py  test_storage.py  test_transform_version.py  test_validation.py
tests/unit/ingests/: README.md  __init__.py  conftest.py
(+434 files in other folders)
