[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "bridge"
dynamic = ["version"]
description = "Translator Phase 3 Data Ingest Pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bmt",
    "biolink-model",
    "click>=8.0.0",
    "kghub-downloader>=0.4.2",
    "koza",
    "robokop-orion==0.1.6",
    "hatchling",
    "uv-dynamic-versioning>=0.11.2",
]

[project.scripts]
validate-kgx = "translator_ingest.util.validate_kgx:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=24.1.0",
    "codespell>=2.2.0",
    "ruff>=0.12.8",
    "pandas",   # also installs numpy
    "requests",
    # for CX notebook support: I use an old version that works with extensions
    "nbclassic",
    "jupyter_contrib_nbextensions",
    "jsonlines",
    "resource-ingest-guide-schema",
    # Documentation dependencies
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["*.ipynb"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.uv]
package = true

[tool.uv.sources]
koza = { git = "https://github.com/monarch-initiative/koza.git", rev = "translator-ingests-input-dir-2" }
bmt = { git = "https://github.com/biolink/biolink-model-toolkit.git", rev = "most-specific-category-method-patch" }
biolink-model = { git = "https://github.com/biolink/biolink-model.git", rev = "master" }
resource-ingest-guide-schema = { git = "https://github.com/biolink/resource-ingest-guide-schema.git", rev = "meta-knowledge-graph-json-ingest" }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/translator_ingest"]
